优化图片加载问题

--- a/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -12,6 +12,7 @@ sticky: 2
 swiper_index: 2
 date: 2022-08-09 18:19:03
 updated: 2023-05-16 17:47:00
+cover: /assets/scenery/6381f14f1be65.webp
 ---
 
 # 1.Markdown 语法自带格式
