更改小猫样式

--- a/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -1,17 +1,22 @@
 ---
 title: Markdown语法与外挂标签写法汇总
+# 介绍
 description: 🥧本文汇总Markdown格式以及外挂标签在网页端的渲染效果，可作为文档进行查询
 mathjax: true
+# 标签
 tags:
   - Markdown
   - 外挂标签
+#   分类
 categories:
   - 演示
 abbrlink: 2013454d
 sticky: 2
+# 置顶轮播图顺序，非负整数，数字越大越靠前
 swiper_index: 2
 date: 2022-08-09 18:19:03
 updated: 2023-05-16 17:47:00
+# 博客封面
 cover: /assets/scenery/6381f14f1be65.webp
 ---
 
