--- a/source/_posts/02.md
+++ b/source/_posts/02.md
@@ -1,5 +1,6 @@
 ---
-title: 2
+title: 02
+description: 随便写写测试一下
 abbrlink: 1ad5be0d
 date: 2023-05-14 16:05:13
 tags:
@@ -7,4 +8,5 @@ tags:
   - 日常
 categories:
   - js
+swiper_index: 3
 ---
