转换图片格式，加载优化

--- a/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -18,7 +18,7 @@ swiper_index: 2
 date: 2022-08-09 18:19:03
 updated: 2023-05-23 22:04:00
 # 博客封面
-cover: /assets/scenery/6381f14f1be65.webp
+cover: /assets/blog_bg/1.webp
 ---
 
 # 1.Markdown 语法自带格式
@@ -1527,7 +1527,7 @@ Any content (support inline tags too.io).
 ```Markdown
 {% sitegroup %}
 
-{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.png, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
+{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
 
 {% endsitegroup %}
 ```
@@ -1537,7 +1537,7 @@ Any content (support inline tags too.io).
 <!-- tab 渲染演示 -->
 
 {% sitegroup %}
-{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.png, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
+{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
 
 {% endsitegroup %}
 
