--- a/source/_posts/ES6-11.md
+++ b/source/_posts/ES6-11.md
@@ -10,7 +10,7 @@ tags:
 categories:
   - 前端
 swiper_index: 1
-cover: /assets/scenery/106986233_p0.png
+cover: /assets/blog_bg/4.webp
 ---
 
 ## ECMASript 6 新特性
