Save Post Draft source/_drafts/d1.md by Qexo

--- a/source/_drafts/d1.md
+++ b/source/_drafts/d1.md
@@ -1,4 +1,9 @@
 ---
-title: d1
-tags:
+abbrlink: ''
+categories: []
+date: ''
+tags: []
+title: hexo后台测试
+updated: 2023-5-25T21:27:9.257+8:0
 ---
+hexo后台配置完成测试
