更改小屋页面

--- a/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -1133,7 +1133,7 @@ Any content (support inline tags too.io).
 <!-- tab 标签语法 -->
 
 ```Markdown
-{% timeline 时间线标题（可选）[,color] %}
+{% timeline 时间线标题（可选）,[color] %}
 <!-- timeline 时间节点（标题） -->
 正文内容
 <!-- endtimeline -->
@@ -1801,8 +1801,8 @@ markdown 图片格式
 
 ```Markdown
 <div class="gallery-group-main">
-{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/gallery_bg/22.jpg %}
-{% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/cartoon/infinity-4359874.jpg %}
+{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/gallery_bg/5.webp %}
+{% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/cartoon/3.webp %}
 </div>
 ```
 
@@ -1822,8 +1822,8 @@ markdown 图片格式
 1.gallerygroup 相册图库
 
 <div class="gallery-group-main">
-{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/gallery_bg/22.jpg %}
-{% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/cartoon/infinity-4359874.jpg %}
+{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/gallery_bg/5.webp %}
+{% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/cartoon/3.webp %}
 </div>
 2.gallery 相册
 
