--- a/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -18,7 +18,7 @@ swiper_index: 5
 date: 2022-08-09
 updated: 2023-05-23
 # 博客封面
-cover: /assets/blog_bg/1.webp
+cover: /assets/images/Darling/3.webp
 ---
 
 # 1.Markdown 语法自带格式
