添加需要侧边栏

--- a/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -2778,7 +2778,7 @@ content
 ```markdown
 {% hideBlock 点我预览, blue %}
 这里有张图片：
-<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/T(ZG)%5DET5HP_DA3OX%5D5G(%7B6.png" alt="image (1)" style="zoom:67%;" />
+<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
 {% endhideBlock %}
 ```
 
@@ -2788,7 +2788,7 @@ content
 
 {% hideBlock 点我预览, blue %}
 这里有张图片：
-<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/T(ZG)%5DET5HP_DA3OX%5D5G(%7B6.png" alt="image (1)" style="zoom:67%;" />
+<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
 {% endhideBlock %}
 
 <!-- endtab -->
