--- a/source/_posts/study/ES6-11.md
+++ b/source/_posts/study/ES6-11.md
@@ -333,29 +333,29 @@ let youxi = {
 
 2. 原生具备 iterator 接口的数据(可用 for of 遍历)
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (1) Array
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (1) Array
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (2) Arguments
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (2) Arguments
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (3) Set
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (3) Set
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (4) Map
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (4) Map
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (5) String
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (5) String
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (6) TypedArray
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (6) TypedArray
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (7) NodeList
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (7) NodeList
 
 3. 工作原理
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (1) 创建一个指针对象，指向当前数据结构的起始位置
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (1) 创建一个指针对象，指向当前数据结构的起始位置
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (2) 第一次调用对象的 next 方法，指针自动指向数据结构的第一个成员
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (2) 第一次调用对象的 next 方法，指针自动指向数据结构的第一个成员
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (3) 接下来不断调用 next 方法，指针一直往后移动，直到指向最后一个成员
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (3) 接下来不断调用 next 方法，指针一直往后移动，直到指向最后一个成员
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  (4) 每调用 next 方法返回一个包含 value 和 done 属性的对象
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (4) 每调用 next 方法返回一个包含 value 和 done 属性的对象
 
 **注: 需要自定义遍历数据的时候，要想到迭代器。**
 
@@ -364,7 +364,7 @@ let youxi = {
 生成器函数是 ES6 提供的一种异步编程解决方案，语法行为与传统函数完全不同
 
 ```js
-function * gen() {
+function* gen() {
   yield "一只没有耳朵";
   yield "一只没有尾巴";
   return "真奇怪";
@@ -504,6 +504,10 @@ ajax("/api/users.json")
 
 使用 then 的第二个回调捕获异常，只能捕获到前一个抛出的异常，而使用 catch，因为每一个 then 都会返回一个 Promise 对象 所以 catch 首先捕获的是一个 then 的异常，然后会捕获链上往前的异常，也就是 catch 会捕获 catch 以前的异常
 
+**Promise.finally()**
+
+不管成功失败，最后都执行的方法
+
 #### Promise 静态方法
 
 Promise.resolve（）
@@ -512,7 +516,7 @@ Promise.reject()
 
 #### Promise 并行执行
 
-##### Promise.all()
+**Promise.all()**
 
 ```js
 // Promise.all 返回一个全新的Promise
@@ -530,7 +534,7 @@ promise
   });
 ```
 
-##### Promise.race()
+**Promise.race()**
 
 Promise.race()也会将多个 promise 对象组合返回一个新的 promise 对象，但与 all 不同的是：
 
@@ -573,24 +577,24 @@ p.then(() => {}).catch((err) => {});
 Promise 执行顺序
 
 ```js
-console.log('global start')
+console.log("global start");
 
 setTimeout(() => {
-  console.log('setTimeout')
-}, 0)
+  console.log("setTimeout");
+}, 0);
 
 Promise.resolve()
   .then(() => {
-    console.log('promise')
+    console.log("promise");
   })
   .then(() => {
-    console.log('promise 2')
+    console.log("promise 2");
   })
   .then(() => {
-    console.log('promise 3')
-  })
-console.log('global end')
-计时器最后执行 先执行两个内置命令
+    console.log("promise 3");
+  });
+console.log("global end");
+//计时器最后执行 先执行两个内置命令
 // global start
 // global end
 // promise
@@ -605,7 +609,7 @@ console.log('global end')
 
 微任务包括`Promise`，`MutationObserver`, `process.nextTick/Generator异步方案`
 
-##### 手撕 Promise
+#### 手撕 Promise
 
 ```js
 /**
