--- a/source/_posts/book/《产品经理必懂的技术那点事儿》.md
+++ b/source/_posts/book/《产品经理必懂的技术那点事儿》.md
@@ -6,7 +6,7 @@ tags:
   - 读书有感
 categories:
   - 读书
-cover: https://cdn.staticaly.com/gh/1405720461/blog_img@main/book/1.webp
+cover: https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/book/1.webp
 abbrlink: e6b61a14
 date: 2022-10-02 14:54:04
 updated: 2022-10-02 14:54:04
