--- a/source/_posts/inspiration/秒速五厘米.md
+++ b/source/_posts/inspiration/秒速五厘米.md
@@ -6,7 +6,7 @@ tags:
   - 电影
 categories:
   - 电影
-cover: https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/2.webp
+cover: https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/2.webp
 abbrlink: 8526d39f
 date: 2022-08-20 11:21:00
 updated: 2022-08-20 11:21:00
@@ -32,7 +32,7 @@ updated: 2022-08-20 11:21:00
 
 &emsp;&emsp;樱花树下，没有纷飞的花瓣，除了冬雪，只有两个小小的身体相互慰藉与取暖。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/1.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/1.webp" style="zoom:50%;" />
 
 &emsp;&emsp;这一刻，对自我的认知突然变得如此强烈，仿佛在这茫茫的空间里，因为眼前这个人，自己在这世界上的坐标也逐渐鲜明与清晰起来。
 
