--- a/source/_posts/inspiration/言叶之庭.md
+++ b/source/_posts/inspiration/言叶之庭.md
@@ -6,7 +6,7 @@ tags:
   - 电影
 categories:
   - 电影
-cover: "https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/4.webp"
+cover: "https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/4.webp"
 abbrlink: 12ec6ff0
 date: 2022-09-03 19:24:13
 updated: 2022-09-03 19:24:13
