--- a/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -1527,7 +1527,7 @@ Any content (support inline tags too.io).
 ```Markdown
 {% sitegroup %}
 
-{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
+{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.jsdelivr.net/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
 
 {% endsitegroup %}
 ```
@@ -1537,7 +1537,7 @@ Any content (support inline tags too.io).
 <!-- tab 渲染演示 -->
 
 {% sitegroup %}
-{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
+{% site 你好可爱, url=https://wjldarling.top, screenshot=https://cdn.jsdelivr.net/gh/1405720461/images@master/img/wjldarling.webp, avatar=https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg, description=关于网站的描述 %}
 
 {% endsitegroup %}
 
@@ -1810,8 +1810,8 @@ markdown 图片格式
 
 ```markdown
 {% gallery %}
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/18.webp)
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/19.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/18.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/19.webp)
 {% endgallery %}
 ```
 
@@ -1828,8 +1828,8 @@ markdown 图片格式
 2.gallery 相册
 
 {% gallery %}
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/18.webp)
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/19.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/18.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/19.webp)
 {% endgallery %}
 
 <!-- endtab -->
@@ -1847,7 +1847,7 @@ markdown 图片格式
 ```Markdown
 {% folding 参数（可选）, 标题 %}
 
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/18.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/18.webp)
 
 {% endfolding %}
 ```
@@ -1865,7 +1865,7 @@ markdown 图片格式
 ```markdown
 {% folding 查看图片测试 %}
 
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/18.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/18.webp)
 
 {% endfolding %}
 
@@ -1906,7 +1906,7 @@ hahaha <span><img src='https://cdn.jsdelivr.net/gh/volantis-x/cdn-emoji/tieba/%E
 
 {% folding 查看图片测试 %}
 
-![](https://cdn.staticaly.com/gh/1405720461/images@master/Violet_Evergarden/18.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/images@master/Violet_Evergarden/18.webp)
 
 {% endfolding %}
 
@@ -2778,7 +2778,7 @@ content
 ```markdown
 {% hideBlock 点我预览, blue %}
 这里有张图片：
-<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
 {% endhideBlock %}
 ```
 
@@ -2788,7 +2788,7 @@ content
 
 {% hideBlock 点我预览, blue %}
 这里有张图片：
-<img src="https://cdn.staticaly.com/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/img/business_card.webp" alt="business_card" style="zoom:67%;" />
 {% endhideBlock %}
 
 <!-- endtab -->
