--- a/source/_posts/weekly_report/2022/7.28 最后の大活动.md
+++ b/source/_posts/weekly_report/2022/7.28 最后の大活动.md
@@ -7,7 +7,7 @@ tags:
   - 大学生活
 categories:
   - 周记
-cover: 
+cover:
 abbrlink: 258716b5
 date: 2022-07-29 16:37:51
 updated: 2022-07-29 16:37:51
@@ -16,7 +16,7 @@ updated: 2022-07-29 16:37:51
 &emsp;&emsp;7.28 这天，进行了盼望已久的最终大活动，从下午三点开始活动，五个纵队分为六组，展开活动的进行。
 
 &emsp;&emsp;刚开始进行的是园区内的第一个活动，拍照片，跟拍视频，然后进行审核，通过之后才可以出园区。
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/14.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/14.webp" style="zoom:50%;" />
 
 &emsp;&emsp;我们选在了数据大厦楼前，跟三纵队一起，拍的时候也是拍了好久，乱干扰，最终网络华佗发功，成功通过。
 
