--- a/source/_posts/weekly_report/2022/假期第五周了.md
+++ b/source/_posts/weekly_report/2022/假期第五周了.md
@@ -7,7 +7,7 @@ tags:
   - 大学生活
 categories:
   - 周记
-cover: 
+cover:
 abbrlink: 5d4a2d90
 date: 2022-02-13 11:39:53
 updated: 2022-02-13 11:39:53
@@ -28,6 +28,6 @@ http://goubianjie.com/bushu/letsgostart.php?user=130159
 附图
 
 <div style="display:flex;">
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/1.webp" style="zoom:33%;" />
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/2.webp" style="zoom:33%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/1.webp" style="zoom:33%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/2.webp" style="zoom:33%;" />
 </div>
