--- a/source/_posts/inspiration/万里归途.md
+++ b/source/_posts/inspiration/万里归途.md
@@ -6,7 +6,7 @@ tags:
   - 电影
 categories:
   - 电影
-cover: "https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/18.webp"
+cover: "https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/18.webp"
 abbrlink: 824f0331
 date: 2022-10-09 20:15:37
 updated: 2022-10-09 20:15:37
@@ -14,7 +14,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;电影《万里归途》知识科普
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/5.webp" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/5.webp" />
 
 一、努米亚的原型
 
@@ -22,7 +22,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;努米亚这个名字应该改编自努米底亚，那是公元前三世纪时在非洲北部建立的一个古老王国，这个王国的大致区域就是现在的利比亚，所以很明显，努米亚撤侨的原型就是 2011 年的利比亚撤侨，当时一共撤出了 35860 名同胞。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/6.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/6.webp" style="zoom:50%;" />
 
 &emsp;&emsp;此外，《万里归途》中的大使馆有一张地图，地图显示的轮廓虽然修改过，但看起来还是和利比亚地图高度相似。
 
@@ -30,7 +30,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;既然努米亚的原型是利比亚，那片中多次出现的努米亚总统画像是谁也就一目了然了。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/7.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/7.webp" style="zoom:50%;" />
 
 二、外交官的级别
 
@@ -50,7 +50,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;这几个角色配置还挺全，外交官七个级别中占了四个。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/8.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/8.webp" style="zoom:50%;" />
 
 &emsp;&emsp;外交官级别分大使、公使、参赞、一等秘书、二等秘书、三等秘书和随员七个级别。
 
@@ -58,13 +58,13 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;参赞分不同领域，有文化、经济、商务和政务参赞，一般设正处或副司级，成泰燊饰演的驻努米亚大使馆政务参赞实际负责指挥很多事，估计是副司级。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/9.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/9.webp" style="zoom:50%;" />
 
 &emsp;&emsp;一等秘书一般是正处或副处级别，按照片中宗大伟、章宁等人的年龄和资历看，这几位估计都是正处级别，所以宗大伟说章宁刻意留在努米亚就是想接严行舟的班，别看一等秘书只差参赞一级，但从级别上看就是正处到副司，还是很重要的。
 
 &emsp;&emsp;王俊凯饰演的成朗比较年轻，只有 25 岁，要不就是本科毕业刚来没几年，要不就是研究生刚毕业，被派出来和老鸟学经验，因为他和宗大伟本来的任务只是信使，文件送到就随机返回，所以上级派一老一新两人来还是没毛病的。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/10.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/10.webp" style="zoom:50%;" />
 
 三、外交护照
 
@@ -74,7 +74,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;按照国际法，各国军政机关对持有外交护照的人要给予尊敬、礼遇和外交特权与豁免权。一句话，老好使了。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/11.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/11.webp" style="zoom:50%;" />
 
 &emsp;&emsp;片中叛军首领穆夫塔让宗大伟举着外交护照录制承认他们政权合法性的视频，这当然是不好使的，宗大伟虽然持有外交护照，但他不是全权大使，录了也白录，所以穆夫塔也没有太为难宗大伟。
 
@@ -82,7 +82,7 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;影片中穆夫塔手下想抢走章宁和白婳的女儿，这个努米亚女孩当然是章宁夫妻收养的，估计她还没有办理相关手续，所以没有申请外交护照，如果她成为中国公民也有外交护照的话，穆夫塔同样不敢造次。一句话，东方大国在非洲还是相当好使的。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/12.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/12.webp" style="zoom:50%;" />
 
 四、阿拉伯语
 
@@ -92,13 +92,13 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;阿拉伯语是阿拉伯国家的官方语言，也是乍得和坦桑尼亚的官方语言之一，我们看看主要阿拉伯国家的名单：阿尔及利亚、巴林、科摩罗、吉布提、埃及、伊拉克、约旦、科威特、黎巴嫩、利比亚、毛里塔尼亚、摩洛哥、阿曼、巴勒斯坦、卡塔尔、沙特阿拉伯、索马里、苏丹、突尼斯、阿联酋、也门、叙利亚。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/13.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/13.webp" style="zoom:50%;" />
 
 &emsp;&emsp;其中伊拉克、黎巴嫩、叙利亚、巴勒斯坦、索马里、苏丹、利比亚、也门等国家都是经常上新闻头条的地方，虽然阿拉伯国家也有迪拜这样的好去处，但需要用到宗大伟这样的资深外交人员的地方，多数都是战乱频仍的国家。
 
 &emsp;&emsp;所以，开个玩笑的话，学阿拉伯语还是很有前途的，要不就是去富得流油的国家挣钱，要不就是去天天打仗的国家立功。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/14.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/14.webp" style="zoom:50%;" />
 
 五、华兴公司
 
@@ -106,13 +106,13 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;这个华兴公司的原型应该是一家来自宁波的建筑企业华丰公司，当时该公司正在利比亚承建一个几千套住房的大工程，有 936 名员工住在公司基地里。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/15.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/15.webp" style="zoom:50%;" />
 
 &emsp;&emsp;利比亚发生骚乱之后，很快波及到了华丰公司所在的城市，几天之内，多批歹徒洗劫了华丰公司工人驻地，所持武器也逐渐从长刀发展到了 AK47，这就是电影《万里归途》中所说的“被洗劫了五次”。
 
 &emsp;&emsp;在得知歹徒正在大量集结准备彻底洗劫华丰公司工地和宿舍后，公司负责人立刻决定带领全体员工穿越沙漠前往班加西脱离险境，他们轻装简行长途跋涉一百多公里终于到达港口，大使馆已经在那里派人接应，安排他们登上了前往马耳他的轮船，936 人，无一人掉队。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/16.webp" style="zoom:50%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/16.webp" style="zoom:50%;" />
 
 六、大使馆
 
@@ -122,6 +122,6 @@ updated: 2022-10-09 20:15:37
 
 &emsp;&emsp;驻利比亚大使馆负责组织人员撤离，其他大使馆有的负责接应海路，有的负责民航，有的负责陆路，撤离路线有埃及、突尼斯、马耳他和希腊多个渠道，经过 275 个小时奋战，最终撤离 35860 人，成为国际撤侨中的标杆。
 
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/inspiration/17.webp" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/17.webp" />
 
 &emsp;&emsp;说在最后，《万里归途》是一部很写实的撤侨题材电影，希望通过观看该片能让更多观众了解一些国际事务常识，也能进一步了解奋战在外交战线上的“西装战士”们。
