--- a/source/_posts/weekly_report/2022/2022.03.13.md
+++ b/source/_posts/weekly_report/2022/2022.03.13.md
@@ -7,7 +7,7 @@ tags:
   - 大学生活
 categories:
   - 周记
-cover: 
+cover:
 abbrlink: c27c763e
 date: 2022-03-13 01:04:33
 updated: 2022-03-13 01:04:33
@@ -16,7 +16,7 @@ updated: 2022-03-13 01:04:33
 &emsp;&emsp;这周似乎没有发生什么大事，也就每天正常学习啥的，但是在赶进度，给 java 第七八章学完了，感觉看的话差不多能看懂，但是到自己去敲又不知道咋弄了。
 
 &emsp;&emsp;昨天学完第八章之后，然后今天开始写小游戏，上午写那个贪吃蛇，刚开始听的一脸懵逼，后来差不多听的支支吾吾，跟着敲了代码，敲着敲着发现要导入一个资源包，那个资源包我没有，我就去问尚学堂老师要那个资源包了（java 是看的尚学堂的视频学的），那个老师人感觉超好
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/6.webp" style="zoom: 33%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/6.webp" style="zoom: 33%;" />
 
 也聊过计算机各个方面啥的，就感觉挺亲切。尚学堂的课程听着感觉老师教的挺好的，上午因为敲到一半没有资源包了，又跑去敲坦克大战了，也是老报错，是导入包的问题，差不多算解决了，等明天看看给贪吃蛇敲完尽量，下周就敲坦克大战。
 
