--- a/source/_posts/weekly_report/2022/轻松又忙碌的一周.md
+++ b/source/_posts/weekly_report/2022/轻松又忙碌的一周.md
@@ -18,11 +18,11 @@ updated: 2022-03-05 21:42:22
 &emsp;&emsp;今天的话是我对象补考，她线代挂了，也在好好复习，她要努力一点，然后考的还可以，然后晚上吃了顿好的，又去校医院开了个转诊单，准备明天带她去补牙，补四颗大牙。
 
 &emsp;&emsp;然后感觉这周最有意思的就是买了个积木神奇宝贝球，可太好玩啦，刚开始买了个皮卡丘的经典配色，
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/3.webp" style="zoom: 33%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/3.webp" style="zoom: 33%;" />
 然后感觉可太好玩了，就又挑了三个神奇宝贝球，然后今天坐在寝室拼了两个。
-![](https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/4.webp)
+![](https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/4.webp)
 还有一个准备有空再拼，
-<img src="https://cdn.staticaly.com/gh/1405720461/blog_img@main/weekly_report/5.webp" style="zoom: 33%;" />
+<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/5.webp" style="zoom: 33%;" />
 
 &emsp;&emsp;这东西也挺便宜挺划算的，再加上喜欢玩乐高，从 6 岁都开始玩了，一直都挺喜欢玩的，感觉拼着可有意思，然后我皮卡丘买玩以后回寝室在那拼，舍友也相中了，让我给他发链接，然后另一个舍友说他前几天刚 59 买的一个积木，真的是又贵又难看，很不划算，他现在感觉自己跟大怨种一样哈哈哈。
 
