修改文章图片适配，添加博客

--- a/source/_posts/weekly_report/2022/2022.06.18.md
+++ b/source/_posts/weekly_report/2022/2022.06.18.md
@@ -19,9 +19,9 @@ updated: 2022-06-18 23:16:20
 
 &emsp;&emsp;还有朋友送的生日礼物，海贼香克斯的海贼船:雷德·佛斯号，今天中午还有晚上休息时间给拼出来了，挺好看的。
 
-<div style="display:flex;justify-content:space-around">
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/11.webp" style="zoom:50%;" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/12.webp" style="zoom:50%;" />
+<div class='blog-img'>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/11.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/12.webp" />
 </div>
 
 还有我买的皮卡丘，也超级可爱，下面的那个沙包捏着贼软和，闲来无事捏两下。
