--- a/source/_posts/weekly_report/2022/云台山，大怨种之旅.md
+++ b/source/_posts/weekly_report/2022/云台山，大怨种之旅.md
@@ -43,10 +43,10 @@ updated: 2022-08-13 23:40:49
 
 &emsp;&emsp;然后中午快到山顶了，剩下一节路需要自己爬，乖乖，还没爬两步可累了，不知道是睡的太多了还是咋，人快累没了，幸亏带了个毛巾，真的边爬边擦汗，毛巾立大功，终于爬上去了，中间有一节楼梯，每一级还没半个鞋长，真的陡，爬上去之后也是歇了半个小时逛逛，
 
-<div style="display:flex;justify-content:space-around">
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/22.webp" style="zoom:50%;" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/23.webp" style="zoom:50%;" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/24.webp" style="zoom:50%;" />
+<div class='blog-img'>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/22.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/23.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/24.webp" />
 </div>
 
 &emsp;&emsp;然后开始下山，也累的不轻，都想着坐缆车下去了，但是一想 40 块钱怪贵嘞，最后还是走下去了，然后准备回服务区待着，结果发现他们一波人快到红石峡了，想着要不一块去红石峡再玩玩，然后就去红石峡了，一路上挺凉快的吧全是，没有其他的那么累，总的还行
