--- a/source/_posts/weekly_report/2023/青岛三日游.md
+++ b/source/_posts/weekly_report/2023/青岛三日游.md
@@ -18,14 +18,18 @@ updated: 2023-05-21 20:33:04
 
 &emsp;&emsp;就写写四月多计划出去旅游，原本的准备五一去旅游，然后订计划，准备订房的时候，一看五一房价一间五六百，乖乖嘞，平时一百多的房，五一那么贵，就商量着提前去，然后最后研究研究决定四月二十号去，然后坐一晚上车，早上到站，进行了三天的旅游，三天的旅游计划如下，我研究了好久做的攻略
 
-{% inlineimage https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/28.webp %}
-{% inlineimage https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/29.webp %}
-{% inlineimage https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/30.webp %}
-{% inlineimage https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/27.webp %}
+<div class='blog-img'>
+    <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/28.webp" />
+    <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/29.webp" />
+    <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/30.webp" />
+    <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/27.webp" />
+</div>
 
 &emsp;&emsp;一共规划了三天了游玩路线自己吃饭的地方，但是因为有些不可抗力导致有的地方没去逛，但是问题不大，总的来说是挺开心的，第一次出去旅游，第一次做旅游攻略（真滴难做），先选景点，然后看时间门票，再规划一下时间，分配合理路线，然后就订票啥的，最后再算算钱啥的，我们总共四个人，人均一千左右，感觉还算可以，下面这个是价格表，本来也规划了去景点坐地铁啥的，但是最后都是打车去的
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/31.webp" style="zoom:50%;" />
+<div class='blog-img'>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/31.webp"/>
+</div>
 
 &emsp;&emsp;最后一天遇到了个出租车司机阿姨，给我们讲了当地的情况啥的，以及去哪吃饭划算等等，只可惜那天我们就要回去了。
 
