--- a/source/_posts/inspiration/紫罗兰永恒花园.md
+++ b/source/_posts/inspiration/紫罗兰永恒花园.md
@@ -24,13 +24,11 @@ updated: 2022-12-12 08:40:49
 
 &emsp;&emsp;薇尔莉特所处的年代，战火蔓延，病魔无情，薇尔莉特受伤失去亲爱的人，其他人们的生命也时常脆弱无助。奥斯卡失去了他的女儿，安妮失去了她的母亲……人们是否就会思考：命运无常，生命短暂，这个世界，究竟什么东西才是永恒的？战争和疾病夺去了我身边的人，我失去了，更深刻地体会到了他/她于我的重要。虽然不在了，但我永远不会忘记他/她，也无法忘记。他/她于我的影响，也永远不会消失的。这也就像女主角本人，她的名字，这种美丽的花，一部为了爱妻而诞生的伟大发明，这部唯美的动漫作品的名字一样，是永恒而质朴的爱。没有杂质，没有虚伪。
 
-<div style="display:flex;justify-content:space-around">
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/20.webp" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/21.webp" />
-</div>
-<div style="display:flex;justify-content:space-around">
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/22.webp" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/23.webp" />
+<div class='blog-img'>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/20.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/21.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/22.webp" />
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/23.webp" />
 </div>
 
 &emsp;&emsp;因为爱，我们才存在。父母使我们降生于世，成为我们第一任启蒙老师，带领我们认识这个世界。我们带着对父母的感激和爱，在成长的道路上不断前进。如果学会去爱身边最亲的人，也就能体会到爱的意义，从而化“小爱”为“大爱”，进而去爱这个世界，用爱感染身边每一个人，让更多的人能感受到真诚和善意。这就是薇尔莉特能写下无数封美好的书信使善良的人们结缘，人们也因此记住了这位可爱的少女，实现自身价值的原因所在吧。
