--- a/source/_posts/weekly_report/2022/2022.05.22实习周.md
+++ b/source/_posts/weekly_report/2022/2022.05.22实习周.md
@@ -25,9 +25,9 @@ updated: 2022-05-22 15:42:20
 
 然后就是在这里悄悄吐槽室友买的花，浙江的，有钱，搞的那种品种花吧，给我说我也没记住，只是觉得好丑，还花了 160，大怨种，真得捞。
 
-<div style="display:flex;justify-content:space-around">
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/9.webp" style="zoom:50%;" />
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/10.webp" style="zoom:50%;" />
+<div class='blog-img'>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/9.webp"/>
+  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/10.webp" />
 </div>
 
 下周进行复习周，好好学习，去年没去成园区，遗憾，好期待园区生活。
