修改图片格式

--- a/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/study/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -18,7 +18,7 @@ swiper_index: 5
 date: 2022-08-09
 updated: 2023-05-23
 # 博客封面
-cover: /assets/images/Darling/3.webp
+cover: /assets/images/Darling/2.jpg
 ---
 
 # 1.Markdown 语法自带格式
@@ -1801,7 +1801,7 @@ markdown 图片格式
 
 ```Markdown
 <div class="gallery-group-main">
-{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/images/Violet_Evergarden/1.webp %}
+{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/images/Violet_Evergarden/1.jpg %}
 {% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/images/cartoon/3.webp %}
 </div>
 ```
@@ -1822,7 +1822,7 @@ markdown 图片格式
 1.gallerygroup 相册图库
 
 <div class="gallery-group-main">
-{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/images/Violet_Evergarden/1.webp %}
+{% galleryGroup '紫罗兰永恒花园' '花无凋零之日，意无传递之时，爱情亘古不变，紫罗兰与世长存。' '/box/gallery/Violet_Evergarden' /assets/images/Violet_Evergarden/1.jpg %}
 {% galleryGroup '动漫图' '一些杂七杂八的动漫图' '/box/gallery/cartoon' /assets/images/cartoon/3.webp %}
 </div>
 2.gallery 相册
