--- a/source/_posts/book/《这就是软件工程师》.md
+++ b/source/_posts/book/《这就是软件工程师》.md
@@ -6,7 +6,7 @@ tags:
   - 读书有感
 categories:
   - 读书
-cover: "https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/book/2.webp"
+cover: "https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/book/2.webp"
 abbrlink: 3fc3575b
 date: 2022-10-30 21:24:59
 updated: 2022-10-30 21:24:59
