--- a/source/_posts/weekly_report/2022/云台山，大怨种之旅.md
+++ b/source/_posts/weekly_report/2022/云台山，大怨种之旅.md
@@ -15,46 +15,46 @@ updated: 2022-08-13 23:40:49
 
 &emsp;&emsp;昨天早上我们一行人出发前往云台山，经过了差不多两个多小时的奔波终于到了目的地。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/15.webp" style="zoom:40%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/15.webp" style="zoom:40%;" />
 
 &emsp;&emsp;然后就坐来回的公交车到了岸上服务区，到了订的宾馆内。三人间住着还是挺舒服的，收拾完就中午了，商量决定去小寨沟吃饭，然后进行下午的行程。到了小寨沟，去饭店看了看价格，都是 18+，我们几个人果断拿出泡面，别的不说，泡面真的香（doge），吃完之后去看了海狮表演，就挺灵性的感觉。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/16.webp" style="zoom:40%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/16.webp" style="zoom:40%;" />
 
 &emsp;&emsp;看了一会表演以后就出发继续往里走，先去了潭瀑峡，挺累的就，一路爬上去看看没啥东西，又爬下来，水挺凉的，洗把脸是真的爽。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/17.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/17.webp" style="zoom:20%;" />
 
 &emsp;&emsp;然后又去了泉瀑峡泉瀑峡刚开始有观光车，想着累了直接坐观光车看一遍屯了，结果 md 观光车就走一小节，剩下里面的待自己走，来回十块钱，真大怨种。然后本来刚爬完潭瀑峡都累了，不想走了，找了个水中间的石头上玩了一个小时，等着他们逛完以后我们仨决定回去了，直接坐车回到了宾馆里，然后他们又去逛了猕猴谷，听说没有几只猴就，自己跟猴子一样，累个半死。这波提前回去非常明智。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/18.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/18.webp" style="zoom:20%;" />
 
 &emsp;&emsp;晚上去了音乐节，第一次蹦野迪，感觉一般，可能是第一次不习惯，
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/19.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/19.webp" style="zoom:20%;" />
 
 &emsp;&emsp;玩完之后回去吃饭，找了半天找到了个比较便宜的烩面，想着要加羊肉不加，最后决定多两块钱加个羊肉，血亏。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/20.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/20.webp" style="zoom:20%;" />
 
 &emsp;&emsp;他们计划今天早上七点多去爬茱萸峰，我昨天感觉挺累的，就摆烂不打算去茱萸峰了，去个红石峡得了，然后他们俩人打算早起去茱萸峰嘞，让早上叫他俩，然后今天一早他们来敲门了，“不去了不去了，睡觉”“那我也不去了”（真实对话），然后我八点多睡醒躺床上耍手机，他们俩打着呼噜睡的真的香，一家伙怼到十点多，一打电话发现还在茱萸峰正下来嘞，好家伙在上面待了这么久，我们也起床收拾收拾去吃了个饭（就是买了个驴肉火烧，一个 12，有刺客），吃完以后本来坐车到了红石峡，然后看他们发消息说可挤，商量一下决定去茱萸峰了，坐车坐了半个小时都是在上山，风景挺好的，
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/21.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/21.webp" style="zoom:20%;" />
 
 &emsp;&emsp;然后中午快到山顶了，剩下一节路需要自己爬，乖乖，还没爬两步可累了，不知道是睡的太多了还是咋，人快累没了，幸亏带了个毛巾，真的边爬边擦汗，毛巾立大功，终于爬上去了，中间有一节楼梯，每一级还没半个鞋长，真的陡，爬上去之后也是歇了半个小时逛逛，
 
 <div class='blog-img'>
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/22.webp" />
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/23.webp" />
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/24.webp" />
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/22.webp" />
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/23.webp" />
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/24.webp" />
 </div>
 
 &emsp;&emsp;然后开始下山，也累的不轻，都想着坐缆车下去了，但是一想 40 块钱怪贵嘞，最后还是走下去了，然后准备回服务区待着，结果发现他们一波人快到红石峡了，想着要不一块去红石峡再玩玩，然后就去红石峡了，一路上挺凉快的吧全是，没有其他的那么累，总的还行
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/25.webp" style="zoom:20%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/25.webp" style="zoom:20%;" />
 
 &emsp;&emsp;当时最后一节儿的时候，我跟张过真的是脑子里面想的全是大桶冰雪碧，想想喝着都爽，但是这边太贵了，到了服务区赶紧买了一桶，然后回去一下子炫了五六杯，真的爽，咋会有镇爽的饮料嘞（doge），一下子可喝带劲了。最后休息了会，然后坐车回来啦。两天的云台山之旅到此结束。
 
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/26.webp" style="zoom:40%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/26.webp" style="zoom:40%;" />
 
 &emsp;&emsp;真的一群大怨种，以后带对象旅游坚决不去爬山，太怨种了，费力不讨好，以后去海边玩。
