--- a/source/_posts/weekly_report/2022/假期第五周了.md
+++ b/source/_posts/weekly_report/2022/假期第五周了.md
@@ -28,6 +28,6 @@ http://goubianjie.com/bushu/letsgostart.php?user=130159
 附图
 
 <div class='blog-img'>
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/1.webp"/>
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/2.webp"/>
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/1.webp"/>
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/2.webp"/>
 </div>
