--- a/source/_posts/weekly_report/2023/个人博客.md
+++ b/source/_posts/weekly_report/2023/个人博客.md
@@ -8,7 +8,7 @@ tags:
   - 博客
 categories:
   - 周记
-cover: "https://cdn.jsdelivr.net/gh/1405720461/images@master/img/wjldarling.webp"
+cover: "https://fastly.jsdelivr.net/gh/1405720461/images@master/img/wjldarling.webp"
 abbrlink: b5ea4f7a
 date: 2023-05-21 20:49:08
 updated: 2023-05-21 20:49:08
