--- a/source/_posts/book/《高效能人士的七个习惯》.md
+++ b/source/_posts/book/《高效能人士的七个习惯》.md
@@ -6,7 +6,7 @@ tags:
   - 读书有感
 categories:
   - 读书
-cover: "https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/book/3.webp"
+cover: "https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/book/3.webp"
 abbrlink: 109f566b
 date: 2022-11-13 20:43:43
 updated: 2022-11-13 20:43:43
