--- a/source/_posts/inspiration/声之形——看破且努力着，心花终会绽放.md
+++ b/source/_posts/inspiration/声之形——看破且努力着，心花终会绽放.md
@@ -6,7 +6,7 @@ tags:
   - 电影
 categories:
   - 电影
-cover: https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/3.webp
+cover: https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/3.webp
 abbrlink: 5ca654b9
 date: 2022-08-28 22:47:49
 updated: 2022-08-28 22:47:49
