--- a/source/_posts/weekly_report/2022/2022.06.18.md
+++ b/source/_posts/weekly_report/2022/2022.06.18.md
@@ -20,11 +20,11 @@ updated: 2022-06-18 23:16:20
 &emsp;&emsp;还有朋友送的生日礼物，海贼香克斯的海贼船:雷德·佛斯号，今天中午还有晚上休息时间给拼出来了，挺好看的。
 
 <div class='blog-img'>
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/11.webp" />
-  <img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/12.webp" />
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/11.webp" />
+  <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/12.webp" />
 </div>
 
 还有我买的皮卡丘，也超级可爱，下面的那个沙包捏着贼软和，闲来无事捏两下。
-<img src="https://cdn.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/13.webp" style="zoom:50%;" />
+<img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/weekly_report/13.webp" style="zoom:50%;" />
 
 &emsp;&emsp;最后就是新买的显示屏，线给寄错了，寄的两头都是 DP 的线，插不上，还不给补发转换器，说让我自备一个 DP 转 typec 的线，直接看了看屏幕，找到了一个坏点，然后索赔了一个 DP-typec 的线，寄了两天还没过来。
