✨ feat(兔兔): 添加语录

--- a/source/_posts/inspiration/紫罗兰永恒花园.md
+++ b/source/_posts/inspiration/紫罗兰永恒花园.md
@@ -14,7 +14,9 @@ updated: 2022-12-12 08:40:49
 
 &emsp;&emsp;从前，车马很慢，书信很远，一生只够爱一人。
 
-![](https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/19.webp)
+<div class='blog-img'>
+ <img src="https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/inspiration/19.webp" />
+</div>
 
 &emsp;&emsp;“信”对你来说意味着什么呢？是从前的人们传达讯息的工具？现代化社会的我们拥有了覆盖着整个世界的网络和智能手机，相隔甚远的对方能通过上述方式第一时间收到你想传达的信息。有了这些，我们是否也能做到更多的事情呢？互联网是这个时代的象征之一，平和无战乱，不断进步的科技成果，我们对于世界的了解变得更容易，有更多的内容摆在了面前，我们心里想要的东西，似乎也有所改变了。
 
