--- a/source/_posts/study/2023/响应式网站设计.md
+++ b/source/_posts/study/2023/响应式网站设计.md
@@ -26,7 +26,9 @@ updated: 2023-09-10 00:00:00
 - 标签导航在接近手持终端设备时改变为经典的抽屉式导航
 - 网站的布局会根据视口来调整模块的大小和位置
 
-![](https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/44.png)
+<div class='blog-img'>
+  <img src='https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/44.png' />
+</div>
 
 ## 二、实现方式
 
