--- a/source/_posts/study/2024/大文件上传如何实现断点续传.md
+++ b/source/_posts/study/2024/大文件上传如何实现断点续传.md
@@ -37,7 +37,9 @@ updated: 2024-02-05 00:00:00
 
 如下图
 
-![](https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/37.png)
+<div class='blog-img'>
+ <img src='https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/37.png' />
+</div>
 
 上传完之后再由服务端对所有上传的文件进行汇总整合成原始的文件
 
@@ -67,7 +69,9 @@ updated: 2024-02-05 00:00:00
 
 整体思路比较简单，拿到文件，保存文件唯一性标识，切割文件，分段上传，每次上传一段，根据唯一性标识判断文件上传进度，直到文件的全部片段上传完毕
 
-![](https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/38.png)
+<div class='blog-img'>
+ <img src='https://fastly.jsdelivr.net/gh/1405720461/blog_img@main/study/38.png' />
+</div>
 
 下面的内容都是伪代码
 
